[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.2"
anyhow = "1.0.75"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.12.0"
nom = "7.1.3"
num = "0.4.1"
rayon = "1.8.0"
shrinkwraprs = "0.3.0"
